fix: change margin between bullets on mobile version

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -234,7 +234,7 @@
 .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
 .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
   @media (max-width: $mobile-width-max) {
-    margin: 0 30px;
+    margin: 0 10px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
